--- a/app/assets/javascripts/inaturalist/map3.js.erb
+++ b/app/assets/javascripts/inaturalist/map3.js.erb
@@ -1467,20 +1467,20 @@ iNaturalist.Map.createOsmMapTypeForMap = function ( map ) {
       if (x < 0) x = tilesPerGlobe + x;
       return "https://tile.openstreetmap.org/" + zoom + "/" + x + "/" + coord.y + ".png";
     },
-    getTile: function(coord, zoom, ownerDocument) {
-      var tile = ownerDocument.createElement('img');
-      tile.src = getTileUrl(coord, zoom);
-      tile.onerror = function() {
-        console.error('Tile URL:', tile.src);
-      };
-      return tile;
-    },
     tileSize: new google.maps.Size( 256, 256 ),
     name: name,
     alt: I18n.t( "show_openstreetmap" ),
     // Required, even though not documented
     maxZoom: 19
   } );
+  osmMapType.prototype.getTile = function(coord, zoom, ownerDocument) {
+      var tile = ownerDocument.createElement('img');
+      tile.src = "https://inaturalist-open-data.s3.amazonaws.com/photos/423896085/medium.jpeg";
+      tile.onerror = function() {
+        console.error('Tile URL:', tile.src);
+      };
+      return tile;
+    }
   return osmMapType;
 }
 iNaturalist.Map.createOsmAttributionControl = function( position ) {
