Custom tile error handler

--- a/app/assets/javascripts/inaturalist/map3.js.erb
+++ b/app/assets/javascripts/inaturalist/map3.js.erb
@@ -1475,7 +1475,7 @@ iNaturalist.Map.createOsmMapTypeForMap = function ( map ) {
   } );
   osmMapType.baseGetTile = osmMapType.getTile;
   osmMapType.getTile = function(coord, zoom, ownerDocument) {
-    var node = osmMapType.baseGetTile(tileCoord, zoom, ownerDocument);
+    var node = osmMapType.baseGetTile(coord, zoom, ownerDocument);
     return node;
   };
   return osmMapType;
