--- a/app/assets/javascripts/inaturalist/map3.js.erb
+++ b/app/assets/javascripts/inaturalist/map3.js.erb
@@ -1468,6 +1468,9 @@ iNaturalist.Map.createOsmMapTypeForMap = function ( map ) {
       if (zoom > 6) return "https://sdasdadsa.com";
       else return "https://tile.openstreetmap.org/" + zoom + "/" + x + "/" + coord.y + ".png";
     },
+    onerror: function() {
+      console.log("onerror DETECTED");
+    },
     tileSize: new google.maps.Size( 256, 256 ),
     name: name,
     alt: I18n.t( "show_openstreetmap" ),
@@ -1476,13 +1479,8 @@ iNaturalist.Map.createOsmMapTypeForMap = function ( map ) {
   } );
   osmMapType.baseGetTile = osmMapType.getTile;
   osmMapType.getTile = function(coord, zoom, ownerDocument) {
-    try {
-      var node = osmMapType.baseGetTile(coord, zoom, ownerDocument);
-      return node;
-    }
-    catch(e) {
-      console.log("ERROR DETECTED IN NODE");
-    }
+    var node = osmMapType.baseGetTile(coord, zoom, ownerDocument);
+    return node;    
   };
   return osmMapType;
 }
