--- a/app/assets/javascripts/inaturalist/map3.js.erb
+++ b/app/assets/javascripts/inaturalist/map3.js.erb
@@ -1485,8 +1485,8 @@ iNaturalist.Map.createOsmMapTypeForMap = function ( map ) {
   return osmMapType;
 }
 
-document.addEventListener('error', event => {
-    const target = event.target;
+document.addEventListener('error', function(event) {
+    var target = event.target;
     if (target.tagName === 'IMG') {
         event.preventDefault();
         console.log("onerror addEventListener DETECTED");
