--- a/app/views/observations/index.html.haml
+++ b/app/views/observations/index.html.haml
@@ -23,7 +23,7 @@
   %meta{ name: "twitter:card", content: "summary" }
 #main-container{ "ng-app": "ObservationSearch", "ng-controller": "SearchController" }
   .container.container-fixed
-    .row.form
+    .row
       .col-xs-12
         #filters.clear
           %h1= t :observations
@@ -38,13 +38,24 @@
                   {{ numFiltersSet }}
             .dropdown-menu.dropdown-menu-right{"ng-include": "'ang/templates/observation_search/filter_menu.html'", onload: "onFiltersLoad( )"}
           .form-inline.pull-right.primary-filters
-            %input.form-control{ placeholder: t( "ranks.species" ), name: "taxon_name", value: params[:taxon_name] }
+            %div
+              %input.form-control{ placeholder: t( "ranks.species" ), name: "taxon_name", value: params[:taxon_name] }
+              .without-taxa.ng-cloak{ "ng-if": "withoutTaxa && withoutTaxa.length > 0" }
+                %details.explore-details-popover
+                  %summary
+                    Without {{ withoutTaxa ? withoutTaxa.length : 0 }} taxa
+                  .menu
+                    %ul
+                      %li{ "ng-repeat": "t in withoutTaxa" }
+                        %inat-taxon.title.split-taxon{ taxon: "t", url: "/taxa/{{ t.id }}" }
+                        %button.btn.btn-nostyle{ "ng-click": "removeWithoutTaxon( t )" }
+                          %i.glyphicon.glyphicon-remove-circle
             %span#place-name-input
               :ruby
                 # Note that if you give this a name like place_name, Chrome will apply its address autocomplete and potentiall obscure results.
                 # https://github.com/inaturalist/inaturalist/issues/2198
               %input#place_name.form-control{ name: "primary_q2", placeholder: t(:location), type: "text", "ng-model": "placeSearch" }
-              %button.btn.btn-default{ type: "button", "ng-click": "focusOnSearchedPlace( )" }= t(:go)
+            %button.btn.btn-default{ type: "button", "ng-click": "focusOnSearchedPlace( )" }= t(:go)
   #stats-container
     .container.container-fixed
       .row
