--- a/app/assets/javascripts/ang/controllers/observation_search.js.erb
+++ b/app/assets/javascripts/ang/controllers/observation_search.js.erb
@@ -1184,7 +1184,7 @@ var SearchController = function (
       $scope.searchAndUpdateStats( );
     } else {
       $scope.witoutTaxa = $scope.witoutTaxa || [];
-      var existing = $scope.witoutTaxa.find( wt => wt.id === taxon.id );
+      var existing = $scope.witoutTaxa.find( function( wt ) { return wt.id === taxon.id; } );
       if ( !existing ) {
         $scope.withoutTaxa.push( taxon );
       }
@@ -1193,7 +1193,7 @@ var SearchController = function (
   }
 
   $scope.removeWithoutTaxon = function ( taxon ) {
-    $scope.withoutTaxa = $scope.withoutTaxa.filter( wt => wt.id !== taxon.id );
+    $scope.withoutTaxa = $scope.withoutTaxa.filter( function( wt ) { return wt.id !== taxon.id; } );
     $scope.params.without_taxon_id = $scope.withoutTaxa.map( function ( wt ) { return wt.id; } ).join( "," );
   }
 
@@ -2316,7 +2316,7 @@ var MapController = function (
 };
 document.addEventListener( 'click', function( e ) {
   var details = [...document.querySelectorAll( 'details.explore-details-popover' )];
-  details.forEach( f => {
+  details.forEach( function( f ) {
     if ( !f.contains( e.target ) ) {
       f.removeAttribute( "open" );
     }
